# f3t

./: .Rbuildignore  .gitignore  DESCRIPTION  Demo.qmd  NAMESPACE  Readme.md  f3t.Rproj
R/: 000-wrappers.R  simulation.R
man/: fft_magnitude.Rd  fft_magnitude_sliding.Rd  fft_parallel.Rd  fft_sliding_parallel.Rd  generate_sine_mixture.Rd  r_generate_sine_mixture.Rd
src/: Makevars.in  Makevars.win.in  f3t-win.def  init.c
src/rust/: Cargo.toml  api.h
src/rust/src/: lib.rs
src/rust/src/lib/: mod.rs
tests/: test_fft.R
