[package]
name = "f3t"
version = "0.1.0"
edition = "2021"

[lib]
name = "f3t"
path = "src/lib/mod.rs"

[dependencies]
savvy = { version = "*", features = ["complex"] }
rustfft = { version = "6" }
ndrustfft = { version = "0.5" }
num-complex = "0.4"
ndarray = { version = "0.16.1", features = ["rayon"] }
fastcwt = "0.1.9"
rayon = "1.10.0"
rand = "0.9.2"
rand_distr = "0.5.1"

[profile.release]
# By default, on release build, savvy terminates the R session when a panic
# occurs. This is the right behavior in that a panic means such a fatal event
# where we can have no hope of recovery.
#
# cf. https://doc.rust-lang.org/book/ch09-03-to-panic-or-not-to-panic.html
#
# However, it's possible that the panic is thrown by some of the dependency
# crate and there's little you can do. In such cases, you can change the
# following line to `panic = "unwind"` to always catch a panic.
panic = "abort"
